# ShannonNet

./: .clang-format  CMakeLists.txt  README.md  conanfile.txt  shannonnet.conf
init/: init.cc
src/: ClientApp.cc  ClientComponent.hpp  Decrypt.cc  Decrypt.h  LWE.hpp  ServerApp.cc  ServerComponent.hpp  common.h
src/app/: ClientApi.hpp
src/config/: config.h
src/controller/: SecretController.hpp
src/dto/: DTOs.hpp
src/main/: Decrypt.cc  Decrypt.h  Encrypt copy.cc  Encrypt.cc  Encrypt.h  ShannonNet.h
src/scripts/: generateSecretFile.cc
src/utils/: log.h  path.cc  path.h  redis.h  thread.cc  thread.h  utils.cc  utils.h
tests/: client_test.cc  json_test.cc  lwe_test.cc  oatpp_test.cc  redis_test.cc  server_test.cc
